Fiddatani prov names

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2310,7 +2310,7 @@
  PROV2309: "Achikcha"
  PROV2310: "Olope"
  PROV2311: "Tachena"
- PROV2312: "2312"
+ PROV2312: "Inpoewok"
  PROV2313: "Magra"
  PROV2314: "Heguara"
  PROV2315: "Eastern Forstilic Sea"
@@ -2344,22 +2344,22 @@
  PROV2343: "Cuacha"
  PROV2344: "Chingapa"
  PROV2345: "Parantuk"
- PROV2346: "2346"
- PROV2347: "2347"
- PROV2348: "2348"
- PROV2349: "2349"
- PROV2350: "2350"
+ PROV2346: "Puhukici"
+ PROV2347: "Aluwataku"
+ PROV2348: "Eyuwaku"
+ PROV2349: "Bircac"
+ PROV2350: "Wahiswer"
  PROV2351: "Elin's Pass"
  PROV2352: "Saatkaak Bay"
  PROV2353: "Kanayuk Bay"
  PROV2354: "Aasrivakian Coast"
- PROV2355: "2355"
+ PROV2355: "Hamoreaki"
  PROV2356: "Apunian Coast"
- PROV2357: "2357"
- PROV2358: "2358"
- PROV2359: "2359"
- PROV2360: "2360"
- PROV2361: "2361"
+ PROV2357: "Ewokoesono"
+ PROV2358: "Kiheraki"
+ PROV2359: "Yakiscaki"
+ PROV2360: "Wkuyiukohi"
+ PROV2361: "Kohecoku"
  PROV2362: "Otomoca"
  PROV2363: "Taiguk Peninsula"
  PROV2364: "South Blawenn Coast"
@@ -2374,32 +2374,32 @@
  PROV2373: "Takumiawane"
  PROV2374: "Mosasay"
  PROV2375: "Yanukea"
- PROV2376: "2376"
+ PROV2376: "Solixrimta"
  PROV2377: "Thiaran Coast"
- PROV2378: "2378"
+ PROV2378: "Katahiwakani"
  PROV2379: "Saguaca"
  PROV2380: "Kaltesmeer"
  PROV2381: "Tayobaka"
- PROV2382: "2382"
+ PROV2382: "Wenicixi"
  PROV2383: "Diacuba"
  PROV2384: "Hicabo"
- PROV2385: "2385"
- PROV2386: "2386"
+ PROV2385: "Kaniwakani"
+ PROV2386: "Minaspoti"
  PROV2387: "Amutiaka"
  PROV2388: "Lalayteapi"
- PROV2389: "2389"
- PROV2390: "2390"
+ PROV2389: "Pacapxita"
+ PROV2390: "Smenowomi"
  PROV2391: "Eastern Gunther's Bay"
- PROV2392: "2392"
+ PROV2392: "Ykuyiati"
  PROV2393: "Idibiwasi"
  PROV2394: "Memeiatipi"
  PROV2395: "Western Gunther's Bay"
  PROV2396: "Witaip"
  PROV2397: "Southern Gunther's Bay"
- PROV2398: "2398"
- PROV2399: "2399"
- PROV2400: "2400"
- PROV2401: "2401"
+ PROV2398: "Hihaxnita"
+ PROV2399: "Hinahepirti"
+ PROV2400: "Katatospirha"
+ PROV2401: "Phyahexha"
  PROV2402: "Kaerepipi"
  PROV2403: "Bizhan"
  PROV2404: "Kinhqogi Coast"
@@ -2593,15 +2593,15 @@
  PROV2592: "Oshkamaama"
  PROV2593: "Waasagabe"
  PROV2594: "Heisen Sea"
- PROV2595: "2595"
+ PROV2595: "Yuknepoye"
  PROV2596: "Kaoriripi"
  PROV2597: "Gongjag Strait"
  PROV2598: "Chamnam Bay"
  PROV2599: "Beidao Coast"
  PROV2600: "Desheng Bay"
  PROV2601: "Eyaekwa"
- PROV2602: "2602"
- PROV2603: "2603"
+ PROV2602: "Motehi"
+ PROV2603: "Hawokasotli"
  PROV2604: "Eiteyee"
  PROV2605: "Ibiebi"
  PROV2606: "Eoreaibi"
@@ -2609,13 +2609,13 @@
  PROV2608: "Etubaturukya"
  PROV2609: "Kiririibi"
  PROV2610: "Takatidibi"
- PROV2611: "2611"
+ PROV2611: "Ksirimahka"
  PROV2612: "Moywela"
  PROV2613: "Moyiwi"
  PROV2614: "Mokoyatiaka"
  PROV2615: "Taawasu"
  PROV2616: "Petitiaka"
- PROV2617: "2617"
+ PROV2617: "Ksiricpale"
  PROV2618: "Iimawa"
  PROV2619: "Iitakulu"
  PROV2620: "Eolinbom Bay"
@@ -2641,7 +2641,7 @@
  PROV2640: "Radoriasan Rainforest"
  PROV2641: "South Laamen Sea"
  PROV2642: "Zoeng Straits"
- PROV2643: "2643"
+ PROV2643: "Mahkahosa"
  PROV2644: "Pagtaan Sea"
  PROV2645: "Wacuwira"
  PROV2646: "Iraetarona"
@@ -2651,31 +2651,31 @@
  PROV2650: "Thundao Straits"
  PROV2651: "Nanakwasu"
  PROV2652: "Ekuiikwasu"
- PROV2653: "2653"
+ PROV2653: "Unesekaku"
  PROV2654: "Iira"
- PROV2655: "2655"
- PROV2656: "2656"
+ PROV2655: "Wanaapake"
+ PROV2656: "Simenawica"
  PROV2657: "Huanghan Coast"
  PROV2658: "Hungcho Bay"
  PROV2659: "Guang Strait"
- PROV2660: "2660"
- PROV2661: "2661"
- PROV2662: "2662"
- PROV2663: "2663"
- PROV2664: "2664"
+ PROV2660: "Yukukiyucama"
+ PROV2661: "Kahakureitare"
+ PROV2662: "Kahawamai"
+ PROV2663: "Sacematehi"
+ PROV2664: "Pekloximlere"
  PROV2665: "Kadinipi"
  PROV2666: "Coast of Yau"
- PROV2667: "2667"
+ PROV2667: "Tawoparu"
  PROV2668: "Capimckabur"
- PROV2669: "2669"
- PROV2670: "2670"
+ PROV2669: "Nuyemari"
+ PROV2670: "Ipalatatehi23"
  PROV2671: "2671"
- PROV2672: "2672"
- PROV2673: "2673"
- PROV2674: "2674"
- PROV2675: "2675"
- PROV2676: "2676"
- PROV2677: "2677"
+ PROV2672: "Kahakawaku"
+ PROV2673: "Iceikuma"
+ PROV2674: "Itekuwataku"
+ PROV2675: "Sananauni"
+ PROV2676: "Uluhiwaku"
+ PROV2677: "Kisepuatai"
  PROV2678: "Maxpuari"
  PROV2679: "Yottohoyri"
  PROV2680: "Posalan Coast"
@@ -2684,9 +2684,9 @@
  PROV2683: "Horcktehoyri"
  PROV2684: "Moltepahni"
  PROV2685: "Shauseng Coast"
- PROV2686: "2686"
- PROV2687: "2687"
- PROV2688: "2688"
+ PROV2686: "Tipahukula"
+ PROV2687: "Manakutiuku"
+ PROV2688: "Atakuma"
  PROV2689: "Hanyar"
  PROV2690: "Sryhla"
  PROV2691: "Lakmag"
@@ -2735,15 +2735,15 @@
  PROV2734: "Demidak"
  PROV2735: "Yyrtylit"
  PROV2736: "Ammag"
- PROV2737: "2737"
+ PROV2737: "Hulukinaku"
  PROV2738: "2738"
  PROV2739: "2739"
  PROV2740: "2740"
  PROV2741: "Puricaichi"
  PROV2742: "Horcktecaichi"
- PROV2743: "2743"
- PROV2744: "2744"
- PROV2745: "2745"
+ PROV2743: "Uninaku"
+ PROV2744: "Enuahinapu"
+ PROV2745: "Tipakehiti"
  PROV2746: "Taciwitu"
  PROV2747: "2747"
  PROV2748: "2748"
@@ -4721,13 +4721,13 @@
  PROV4720: "Asinajwoyis"
  PROV4721: "Mayaiatho"
  PROV4722: "Palaktsajche"
- PROV4723: "4723"
- PROV4724: "4724"
- PROV4725: "4725"
- PROV4726: "4726"
- PROV4727: "4727"
- PROV4728: "4728"
- PROV4729: "4729"
+ PROV4723: "Penuinu"
+ PROV4724: "Timuukehiti"
+ PROV4725: "Wenetukaka"
+ PROV4726: "Kuyukanaku"
+ PROV4727: "Weneputaka"
+ PROV4728: "Ehezenapu"
+ PROV4729: "Ukuwicepu"
  PROV4730: "Pockorhoyri"
  PROV4731: "Serarhaalar"
  PROV4732: "Vackackiptur"
