--- a/localisation/scandinavia_l_english.yml
+++ b/localisation/scandinavia_l_english.yml
@@ -68,6 +68,7 @@
  has_forcelimit_building_trigger_tt: "Has a §YRegimental Camp§! or a §YConscription Center§! building."
  has_courthouse_building_trigger_tt: "Has a §YCourthouse§! or a §YTown Hall§! building."
  has_fort_building_trigger_tt: "Has a §YFort§! building."
+ not_has_fort_building_trigger_tt: "Does NOT have a §YFort§! building."
  has_coast_defense_building_trigger_tt: "Has §YCoastal Defense§! or a §YNaval Battery§! building."
  ###SCRIPTED EFFECTS###
  unlock_privilege_estate_burghers_forest_expansion_tt: "Enable the [Root.GetBurghersOrFallbackName] privilege '§YForest Expansion§!'."
