--- a/localisation/text_l_english.yml
+++ b/localisation/text_l_english.yml
@@ -6929,7 +6929,7 @@
  ALL_CGROUP_PROVS: "All Provinces in our Culture Group"
  ALL_ADJ_COLONIES: "All Adjacent Colonies"
  ALL_REL_PROVS: "All Provinces of our Religion"
- ALL_HRE_PROVS: "All SE Provinces"
+ ALL_HRE_PROVS: "All Sigilian and Imperial Provinces, including Mint and the Diet"
  ALL_CGROUP_COUNTRIES: "All Countries with Provinces of our Culture Group"
  ALL_COUNTRIES: "All Countries"
  ALL_GOV_ENEMIES: "All Revolutionary Enemies"
