--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -306,9 +306,9 @@
  PROV305: "Ilusjõgi"
  PROV306: "Metsaraba"
  PROV307: "Linnutee"
- PROV308: "silmapiir"
+ PROV308: "Silmapiir"
  PROV309: "Põresa"
- PROV310: "koonduv"
+ PROV310: "Koonduv"
  PROV311: "Segenad"
  PROV312: "Tivtan Bay"
  PROV313: "Hurkhzan"
