--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -306,9 +306,9 @@
  PROV_ADJ305: "Ilusjõgi"
  PROV_ADJ306: "Metsaraba"
  PROV_ADJ307: "Linnutee"
- PROV_ADJ308: "silmapiir"
+ PROV_ADJ308: "Silmapiir"
  PROV_ADJ309: "Põresa"
- PROV_ADJ310: "koonduv"
+ PROV_ADJ310: "Koonduv"
  PROV_ADJ311: "Segenad"
  PROV_ADJ312: "Tivtan Bay"
  PROV_ADJ313: "Hurkhzan"
