--- a/localisation/TD_continents_l_english.yml
+++ b/localisation/TD_continents_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  mysentria: "Mysentria"
- kakigia: "kakigia"
+ kakigia: "Kakigia"
  chantlia: "Chantlia"
  venatia: "Venatia"
  sahila: "Sahila"
