--- a/localisation/TD_01_flavour_khemdan_l_english.yml
+++ b/localisation/TD_01_flavour_khemdan_l_english.yml
@@ -18,11 +18,11 @@
  nragan_gems_of_kawgan: "Gems of Kawgan"
  nragan_gems_of_kawgan_desc: "Jades and rubies mined across the entire Kawgan mountain range have been taken from the earth since the ancient times, with mentions dating as far as before the Tsinhoi colonization. Many of our artworks can be found in courts all across the region, from the palaces of Samadian merchants to the throne of the Heisen emperors."
  nragan_sons_of_the_jungle: "Sons of the Jungle"
- nragan_sons_of_the_jungle_desc: "Our warriors have a strong traditions to find themselves a spiritual guardian animal, after which they are meant to take the power after. This dedication to tradition and fierceness in combat has made them known in the region by their Khemdani name - sons of the jungle."
+ nragan_sons_of_the_jungle_desc: "Our warriors have a strong traditions to find themselves a spiritual guardian animal, after which they are meant to take the power after. This dedication to tradition and fierceness in combat has made them known in the region by the name given to them by Phragunan settlers - sons of the jungle."
  nragan_tshemtan_system: "Tshemtan System"
  nragan_tshemtan_system_desc: "Liajnragana has been mostly known to outsiders as a dense, uninhabited forest, with only some aware of our great cultural heritage. In order to put the land to good use, the Hsilan kingdom promoted a wide scale deforestation, using the Hengtuan methods of fertilizing the soil. This rapidly enabled us to have more farmlands and goods to placate the elites."
  nragan_break_the_walls: "Break the Walls"
- nragan_break_the_walls_desc: "Khemdani campaign to our lands often failed due to their inability to establish permanent settlements, however after the development of walled cities we were often left with no way to retaliate. Thankfully, the black powder proved to be incredibely useful and thanks to the foreign guns the armies of Liajnragana quickly gained experienced and fame."
+ nragan_break_the_walls_desc: "Praakani campaigns agaisnt our people often failed due to their inability to establish permanent settlements, however after the development of walled cities we were often left with no way to retaliate. Thankfully, the black powder proved to be incredibely useful and thanks to the foreign guns the armies of Liajnragana quickly gained experienced and fame."
  nragan_tsinhoi_savants: "Tsinhoi Savants"
  nragan_tsinhoi_savants_desc: "After the influx of travelers and writers out of the Tsinhoi archipelago, many found interest in our land, writing down many of our stories and myths, sparking interest of even more scholars and even missionaries, bringing us closer to the Hengtuan world."
  nragan_cultural_synthesis: "Cultural Synthesis"
