--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3843,10 +3843,10 @@
  PROV3842: "3842"
  PROV3843: "Bburgao"
  PROV3844: "Yanshan"
- PROV3845: "3845"
+ PROV3845: "Nongchak"
  PROV3846: "3846"
  PROV3847: "3847"
- PROV3848: "3848"
+ PROV3848: "Nramhub"
  PROV3849: "Kawgan"
  PROV3850: "Kawgan"
  PROV3851: "3851"
@@ -3862,13 +3862,13 @@
  PROV3861: "3861"
  PROV3862: "3862"
  PROV3863: "3863"
- PROV3864: "3864"
+ PROV3864: "Baominthan"
  PROV3865: "3865"
  PROV3866: "Central Alimano Reef"
  PROV3867: "Southern Alimano Reef"
  PROV3868: "Eastern Faiva Sea"
  PROV3869: "Central Faiva Sea"
- PROV3870: "3870"
+ PROV3870: "Sankhe"
  PROV3871: "3871"
  PROV3872: "3872"
  PROV3873: "Northern Faiva Sea"
@@ -3885,43 +3885,43 @@
  PROV3884: "3884"
  PROV3885: "3885"
  PROV3886: "3886"
- PROV3887: "3887"
+ PROV3887: "Khuathai"
  PROV3888: "Futai"
- PROV3889: "3889"
- PROV3890: "3890"
- PROV3891: "3891"
- PROV3892: "3892"
- PROV3893: "3893"
- PROV3894: "3894"
+ PROV3889: "Pchethau"
+ PROV3890: "Haweisnam"
+ PROV3891: "Bansath"
+ PROV3892: "Phararach"
+ PROV3893: "Khoman"
+ PROV3894: "Ma Lan"
  PROV3895: "3895"
- PROV3896: "3896"
- PROV3897: "3897"
+ PROV3896: "Thauran"
+ PROV3897: "Naangar"
  PROV3898: "Tsuksui"
  PROV3899: "3899"
- PROV3900: "3900"
- PROV3901: "3901"
- PROV3902: "3902"
- PROV3903: "3903"
- PROV3904: "3904"
- PROV3905: "3905"
+ PROV3900: "Cinmpai"
+ PROV3901: "Nankeo"
+ PROV3902: "Boihin"
+ PROV3903: "Janmag"
+ PROV3904: "Miekhok"
+ PROV3905: "Lungey"
  PROV3906: "3906"
- PROV3907: "3907"
+ PROV3907: "Thanthara"
  PROV3908: "Manko" #mangrove
  PROV3909: "Khombun"
  PROV3910: "Baa"
  PROV3911: "3911"
- PROV3912: "3912"
+ PROV3912: "Tak"
  PROV3913: "Siangen"
- PROV3914: "3914"
- PROV3915: "3915"
- PROV3916: "3916"
- PROV3917: "3917"
+ PROV3914: "Phanghal"
+ PROV3915: "Huagan"
+ PROV3916: "Khaamgan"
+ PROV3917: "Sungburi"
  PROV3918: "3918"
  PROV3919: "3919"
- PROV3920: "3920"
- PROV3921: "3921"
+ PROV3920: "Daenbung"
+ PROV3921: "Phchidan"
  PROV3922: "3922"
- PROV3923: "3923"
+ PROV3923: "Khuyehuan"
  PROV3924: "3924"
  PROV3925: "3925"
  PROV3926: "3926"
@@ -3930,7 +3930,7 @@
  PROV3929: "3929"
  PROV3930: "3930"
  PROV3931: "3931"
- PROV3932: "3932"
+ PROV3932: "Phamhim"
  PROV3933: "3933"
  PROV3934: "3934"
  PROV3935: "3935"
