rivers and a new region

--- a/localisation/TD_prov_modifiers_l_english.yml
+++ b/localisation/TD_prov_modifiers_l_english.yml
@@ -41,6 +41,10 @@
  daren_estuary_modifier: "Daren Estuary"
  angwar_estuary_modifier: "Angwar Estuary"
  masryg_estuary_modifier: "Mašrig Estuary"
+ kaankhun_estuary_modifier: "Kaankhun Estuary"
+ vangkhon_estuary_modifier: "Vangkhon Estuary"
+ quy_bon_estuary_modifier: "Quy Bon Estuary"
+ khong_tou_estuary_modifier: "Khong Tou Estuary"
  
 
  uzkolian_toll: "Uzkolian Toll"
