--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2668,8 +2668,8 @@
  PROV2667: "Tawoparu"
  PROV2668: "Capimckabur"
  PROV2669: "Nuyemari"
- PROV2670: "Ipalatatehi23"
- PROV2671: "2671"
+ PROV2670: "Ipalatatehi"
+ PROV2671: "Tay Chop"
  PROV2672: "Kahakawaku"
  PROV2673: "Iceikuma"
  PROV2674: "Itekuwataku"
@@ -3845,7 +3845,7 @@
  PROV3844: "Yanshan"
  PROV3845: "Nongchak"
  PROV3846: "3846"
- PROV3847: "3847"
+ PROV3847: "Chim Cau Cao"
  PROV3848: "Nramhub"
  PROV3849: "Kawgan"
  PROV3850: "Kawgan"
@@ -4167,38 +4167,38 @@
  PROV4166: "4166"
  PROV4167: "4167"
  PROV4168: "4168"
- PROV4169: "4169"
- PROV4170: "4170"
- PROV4171: "4171"
- PROV4172: "4172"
- PROV4173: "4173"
- PROV4174: "4174"
- PROV4175: "4175"
- PROV4176: "4176"
- PROV4177: "4177"
+ PROV4169: "Thap Cang"
+ PROV4170: "Nui Nhur"
+ PROV4171: "Na Cung Dien"
+ PROV4172: "Quy Mieng"
+ PROV4173: "Vinhbac"
+ PROV4174: "Thi Diem"
+ PROV4175: "Boun Tuong"
+ PROV4176: "Pheng Pan"
+ PROV4177: "Dien Lam"
  PROV4178: "4178"
  PROV4179: "4179"
  PROV4180: "4180"
  PROV4181: "4181"
  PROV4182: "4182"
- PROV4183: "4183"
- PROV4184: "4184"
- PROV4185: "4185"
- PROV4186: "4186"
- PROV4187: "4187"
- PROV4188: "4188"
- PROV4189: "4189"
- PROV4190: "4190"
- PROV4191: "4191"
- PROV4192: "4192"
- PROV4193: "4193"
- PROV4194: "4194"
+ PROV4183: "Hoa Canh"
+ PROV4184: "Cau Khi"
+ PROV4185: "Hou Tha"
+ PROV4186: "Doi Tieu"
+ PROV4187: "Ta Che"
+ PROV4188: "Dong Tuong"
+ PROV4189: "Dai Dong"
+ PROV4190: "Nram Don"
+ PROV4191: "Dang Tat"
+ PROV4192: "Tol Wang"
+ PROV4193: "Hoi Chi"
+ PROV4194: "Phang Nan"
  PROV4195: "4195"
  PROV4196: "4196"
  PROV4197: "4197"
- PROV4198: "4198"
+ PROV4198: "Thung Nong"
  PROV4199: "4199"
- PROV4200: "4200"
+ PROV4200: "Tha Ao"
  PROV4201: "4201"
  PROV4202: "4202"
  PROV4203: "4203"
@@ -4208,13 +4208,13 @@
  PROV4207: "4207"
  PROV4208: "4208"
  PROV4209: "4209"
- PROV4210: "4210"
- PROV4211: "4211"
+ PROV4210: "Cang Phia Nam"
+ PROV4211: "Moi Cang"
  PROV4212: "4212"
- PROV4213: "4213"
+ PROV4213: "Tnanh Pho Song"
  PROV4214: "4214"
  PROV4215: "4215"
- PROV4216: "4216"
+ PROV4216: "Cang Phia Tay"
  PROV4217: "4217"
  PROV4218: "4218"
  PROV4219: "4219"
