--- a/localisation/TD_01_flavour_kabonen_l_english.yml
+++ b/localisation/TD_01_flavour_kabonen_l_english.yml
@@ -89,4 +89,4 @@
  desc_KBN_Dominated_Trade: "As the sole middlemen between the west and the east, we can manipulate the trade however we want."
  KBN_Hengtuan_Monopoly: "Kabonen Dominated Trade Routes to Hengtua"
  Kabonen_Has_Spices_tt: "If we produce atleast §Y15§! units of Spices"
- Kabonen_Has_Ivory_tt: "If we produce atleast §Y15§! units of Ivory"
+ Kabonen_Has_Ivory_tt: "\nIf we produce atleast §Y15§! units of Ivory"
