--- a/localisation/TD_03_missions_saelian_l_english.yml
+++ b/localisation/TD_03_missions_saelian_l_english.yml
@@ -13,7 +13,7 @@
  TD_emperor_border_protection: "Imperial Fortress"
 
  generic_expand_the_realm_title: "Expand the Realm"
- generic_expand_the_realm_desc: "The Empire once the only civilized empire in Mysentria and we must strive to return to those days of glory."
+ generic_expand_the_realm_desc: ""
  generic_expand_the_realm_tt: "Gain permanent claim on every heretic province in the world and every heathen province in Mysentria."
  TD_emperor_zealous_conquest: "Zealous Conquest"
 
