--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -1,9 +1,9 @@
 ﻿l_english:
  amsulan_sea_area: "Amsulan Gulf"
  furmaria_area: "Furmaric Sea"
- camarian_coast_area: "Camarian Coast"
+ arkabili_sea_area: "Arkabili Sea"
  sea_of_hamidar_area: "Sea of Hamidar"
- southern_alkalen_area: "South Alkalen Sea"
+ southern_alkalen_area: "Southern Alkalen"
  ghrub_sea_area: "Ghrub Sea"
  ostsee_area: "Ostsee"
  onzee_area: "Onzee"
