--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -507,6 +507,7 @@
  ajitengala_group: "Ajitengala"
  anakapa: "Anakapa"
  apiumau: "Apiumau"
+ vaani: "Vaani"
 
  baduan_group: "Baduan"
  anjigar: "Anjigar"
@@ -589,6 +590,11 @@
 
  cokar_group: "Cokar"
  kocgat: "Kocgat"
+ gaboan: "Gaboan"
+ karuani: "Karuani"
+ manyada: "Manyada"
+ muli: "Muli"
+ baigan: "Baigan"
 
  kerdexian_group: "Kerdexian"
  Naitheka: "Naitheka"
@@ -613,3 +619,14 @@
  secesan_group: "Secesan"
  hoyre: "Hoyre"
  skalsoni: "Skalsoni"
+ 
+ itoic_group: "Itoic"
+ itoan: "Itoan"
+
+ madunian_group: "Madunian"
+ mejietatean: "Mejietatean"
+ chungmapwan: "Chungmapwan"
+ mahaati: "Mahaati"
+ kusan: "Kusan"
+ chakkama: "Chakkama"
+ dakhaforan: "Dakhaforan"
