--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -113,3 +113,5 @@
  tubaria_region: "Tubaria"
  abetosia_region: "Abetosia"
  bac_wong_region: "Bac Wong"
+ cokariland_region: "Cokariland"
+ maduni_region: "Maduni"
