--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -122,3 +122,5 @@
  south_teerwerta_tradenode: "South Teerwerta"
  tubaria_tradenode: "Tubaria"
  abetosia_tradenode: "Abetosia"
+ joologon_tradenode: "Joologon"
+ maduni_tradenode: "Maduni"
