--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -112,7 +112,7 @@
  sanedian: "Sanedian"
  eyinar: "Eyinar"
  sarqic: "Sarqic"
- sayutalan: "Sayutalan"
+ sayutalan: "Sayddhalami"
 
  chilverchian_group: "Chilverchian"
  marchien: "Marchien"
