--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -982,7 +982,7 @@
  PROV981: "Arak" #cavern
  PROV982: "Central Amsulan Gulf"
  PROV983: "Ehran"
- PROV984: "984"
+ PROV984: "Amar"
  PROV985: "Fawud"
  PROV986: "Fawud"
  PROV987: "Turahtur" #mountain
@@ -1014,7 +1014,7 @@
  PROV1013: "Blue Sea"
  PROV1014: "Salmitäinen"
  PROV1015: "Turahtur" #mountain
- PROV1016: "1016"
+ PROV1016: "Samasakar"
  PROV1017: "Fawud"
  PROV1018: "Erithynai"
  PROV1019: "Jääsalmiin"
@@ -1096,8 +1096,8 @@
  PROV1095: "Markomer"
  PROV1096: "Fawud"
  PROV1097: "Eastern Sea of Oiva"
- PROV1098: "1098"
- PROV1099: "1099"
+ PROV1098: "Sulsaywa"
+ PROV1099: "Asmazal"
  PROV1100: "Qupatra"
  PROV1101: "Pelegta"
  PROV1102: "Byziyl"
@@ -4520,7 +4520,7 @@
  PROV4519: "Aslamat"
  PROV4520: "Darak"
  PROV4521: "Dalalun"
- PROV4522: "4522"
+ PROV4522: "Mazdatanjar"
  PROV4523: "Alwamira" #Mirrha Valley
  PROV4524: "Naesakh" #Soft Rock
  PROV4525: "Carzhumat"
