--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -513,7 +513,7 @@
  anjigar: "Anjigar"
  azguran: "Azguran"
  braissli: "Braissli"
- lamedinian: "Lamedinian"
+ lamedinian: "Lamedini"
  amassani: "Amassani"
  tayufan: "Tayufan"
 
