--- a/localisation/TD_prov_modifiers_l_english.yml
+++ b/localisation/TD_prov_modifiers_l_english.yml
@@ -45,6 +45,10 @@
  vangkhon_estuary_modifier: "Vangkhon Estuary"
  quy_bon_estuary_modifier: "Quy Bon Estuary"
  khong_tou_estuary_modifier: "Khong Tou Estuary"
+ apabana_estuary_modifier: "Apabana Estuary"
+ jambaka_estuary_modifier: "Jambaka Estuary"
+ pigara_estuary_modifier: "Pigara Estuary"
+ dammamate_estuary_modifier: "Dammamate Estuary"
  
 
  uzkolian_toll: "Uzkolian Toll"
