--- a/localisation/TD_01_Flavour_sarikullu_l_english.yml
+++ b/localisation/TD_01_Flavour_sarikullu_l_english.yml
@@ -15,3 +15,21 @@
  ELWY: "Ëlwy"
  ELWYAELWY: "Elwyaëlwy"
  GRAND_FEDERATION: "Grand Federation"
+
+ sarikullan_ideas: "Šarikullan ideas"
+ sarikullan_ideas_bonus: "Šarikullan Ambition"
+ sarikullan_ideas_start: "Šarikullan Traditions"
+ sarikullu_teneran_federation: "Teneran Federastion"
+ sarikullu_teneran_federation_desc: "The idea of Teneran nomads organizing into federations is not new, with records of Makarrian federation dating back to times before the cult of Ilum. As states of the plains and near the coast started to consolidate, so did the federations, clumping into bigger and bigger entities, in 987 finally encompassing most Braissli tribes."
+ sarikullu_merchants_of_luxury: "Merchants of Luxury"
+ sarikullu_merchants_of_luxury_desc: "The great Parroutan civilization produces many wonders sought after in the North, and thankfully the best routes pass through our land. This strengthens not only the purse of our merchants, but also their prestige and renown, often being the only ones able to supply the good in a relatively short time."
+ sarikullu_system_of_tributes: "System of Tributes"
+ sarikullu_system_of_tributes_desc: "Every time a tribute is collected from a vassalized tribe, it is divided using the system almost as ancient as the federation itself. One third goes to the treasury of the current Elwyaëlwy. Third of the remains goes to the clergy and all the servants of the Elwyaëlwy across the realm. The remaining tribute is then evenly split among all tribes."
+ sarikullu_raid_and_trade: "Raids and Trade"
+ sarikullu_raid_and_trade_desc: "Our strength lies not only in the power of the coin, but also in our tradition to raid those who oppose us. If they do not wish to partake in our enterprise, they will pay with their blood."
+ sarikullu_jambakan_settlements: "Jambakan Settlements"
+ sarikullu_jambakan_settlements_desc: "The clans of central valley have often used the power of Jambakan men to work on their farms or in caravans. As our cities grow and Elwys became richer, many more slaves were bought further fueling our economy."
+ sarikullu_independent_diplomats: "Independent Diplomats"
+ sarikullu_independent_diplomats_desc: "While most of institutions are shared between the tribes, the clan members are still able to independently conduct some diplomacy in the name of the Elwyaëlwy."
+ sarikullu_controlled_migrations: "Organized Migrations"
+ sarikullu_controlled_migrations_desc: "Many, if not most, of the northern clans are migratory for majority of the year. To smoothen their travels and resolve conflicts with more settled tribes, agreement was made, sharing many oases and hubs between clans, ensuring land is never the reason of a conflict."
