Nragan prov names

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1221,7 +1221,7 @@
  PROV1220: "Galeqan Sea"
  PROV1221: "Lumkux"
  PROV1222: "Pachulel"
- PROV1223: "1223"
+ PROV1223: "Foomzoo"
  PROV1224: "1224"
  PROV1225: "Pholakis"
  PROV1226: "Maragos"
@@ -3844,46 +3844,46 @@
  PROV3843: "Bburgao"
  PROV3844: "Yanshan"
  PROV3845: "Nongchak"
- PROV3846: "3846"
+ PROV3846: "Nokawj"
  PROV3847: "Chim Cau Cao"
  PROV3848: "Nramhub"
  PROV3849: "Kawgan"
  PROV3850: "Kawgan"
- PROV3851: "3851"
+ PROV3851: "Liabnyab"
  PROV3852: "Haxe"
- PROV3853: "3853"
+ PROV3853: "Niamlaus"
  PROV3854: "Eastern Itiiti Current"
- PROV3855: "3855"
- PROV3856: "3856"
+ PROV3855: "Hnavtoos"
+ PROV3856: "Yoov"
  PROV3857: "Western Itiiti Current"
  PROV3858: "Western Aitu Sea"
- PROV3859: "3859"
- PROV3860: "3860"
- PROV3861: "3861"
- PROV3862: "3862"
- PROV3863: "3863"
+ PROV3859: "Rehuav"
+ PROV3860: "Iabtexhauj"
+ PROV3861: "Qhebtoo"
+ PROV3862: "Phabnetsa"
+ PROV3863: "Sevqua"
  PROV3864: "Baominthan"
- PROV3865: "3865"
+ PROV3865: "Taxhab"
  PROV3866: "Central Alimano Reef"
  PROV3867: "Southern Alimano Reef"
  PROV3868: "Eastern Faiva Sea"
  PROV3869: "Central Faiva Sea"
  PROV3870: "Sankhe"
- PROV3871: "3871"
- PROV3872: "3872"
+ PROV3871: "Pajyeeb"
+ PROV3872: "Pojniam"
  PROV3873: "Northern Faiva Sea"
- PROV3874: "3874"
+ PROV3874: "Taisphiab"
  PROV3875: "Kawgan"
  PROV3876: "3876"
- PROV3877: "3877"
+ PROV3877: "Nepua"
  PROV3878: "Southeastern Farigan Sea"
- PROV3879: "3879"
- PROV3880: "3880"
- PROV3881: "3881"
- PROV3882: "3882"
- PROV3883: "3883"
- PROV3884: "3884"
- PROV3885: "3885"
+ PROV3879: "Kablaug"
+ PROV3880: "Netseeb"
+ PROV3881: "Xiavmeem"
+ PROV3882: "Hauvncoo"
+ PROV3883: "Rhaubdej"
+ PROV3884: "Nepogmuag"
+ PROV3885: "Nitshuab"
  PROV3886: "3886"
  PROV3887: "Khuathai"
  PROV3888: "Futai"
@@ -3893,7 +3893,7 @@
  PROV3892: "Phararach"
  PROV3893: "Khoman"
  PROV3894: "Ma Lan"
- PROV3895: "3895"
+ PROV3895: "Puavtsev"
  PROV3896: "Thauran"
  PROV3897: "Naangar"
  PROV3898: "Tsuksui"
@@ -3904,12 +3904,12 @@
  PROV3903: "Janmag"
  PROV3904: "Miekhok"
  PROV3905: "Lungey"
- PROV3906: "3906"
+ PROV3906: "Noogtswg"
  PROV3907: "Thanthara"
  PROV3908: "Manko" #mangrove
  PROV3909: "Khombun"
  PROV3910: "Baa"
- PROV3911: "3911"
+ PROV3911: "Ntxhwtsev"
  PROV3912: "Tak"
  PROV3913: "Siangen"
  PROV3914: "Phanghal"
@@ -3917,23 +3917,23 @@
  PROV3916: "Khaamgan"
  PROV3917: "Sungburi"
  PROV3918: "3918"
- PROV3919: "3919"
+ PROV3919: "Plastsev"
  PROV3920: "Daenbung"
  PROV3921: "Phchidan"
  PROV3922: "3922"
  PROV3923: "Khuyehuan"
- PROV3924: "3924"
- PROV3925: "3925"
+ PROV3924: "Tsuagcog"
+ PROV3925: "Huabxeeb"
  PROV3926: "3926"
- PROV3927: "3927"
- PROV3928: "3928"
- PROV3929: "3929"
+ PROV3927: "Hlobvog"
+ PROV3928: "Phaujvog"
+ PROV3929: "Txumzooj"
  PROV3930: "3930"
  PROV3931: "3931"
  PROV3932: "Phamhim"
  PROV3933: "3933"
- PROV3934: "3934"
- PROV3935: "3935"
+ PROV3934: "Hmaliab"
+ PROV3935: "Luavruav"
  PROV3936: "Tamjuq"
  PROV3937: "Gelmets"
  PROV3938: "Tuvam'Tawak"
@@ -3972,7 +3972,7 @@
  PROV3971: "Aaitko"
  PROV3972: "Aahkarsamay"
  PROV3973: "Kouyan"
- PROV3974: "3974"
+ PROV3974: "Qhovsiab"
  PROV3975: "Gotadan"
  PROV3976: "Mgujien"
  PROV3977: "Sapate"
@@ -4193,9 +4193,9 @@
  PROV4192: "Tol Wang"
  PROV4193: "Hoi Chi"
  PROV4194: "Phang Nan"
- PROV4195: "4195"
- PROV4196: "4196"
- PROV4197: "4197"
+ PROV4195: "Foomtsiszoo"
+ PROV4196: "Dabgug"
+ PROV4197: "Qabkhav"
  PROV4198: "Thung Nong"
  PROV4199: "4199"
  PROV4200: "Tha Ao"
