--- a/localisation/TD_mercs_l_english.yml
+++ b/localisation/TD_mercs_l_english.yml
@@ -56,3 +56,9 @@
  merc_pamkusean_free_company: "Pamkusean Free Company"
  merc_vetican_company: "Vetican Company"
  merc_free_army_of_monne: "Free Army of Monne"
+
+ merc_outer_heaven: "Outer Heaven"
+ merc_hwangs_army: "Hwang's Army"
+ merc_forest_bandits: "Forest Bandits"
+ merc_ruekokians: "Ruekokians"
+ merc_shengang_monks: "Shengang Monks"
