--- a/localisation/TD_mercs_l_english.yml
+++ b/localisation/TD_mercs_l_english.yml
@@ -62,3 +62,4 @@
  merc_forest_bandits: "Forest Bandits"
  merc_ruekokians: "Ruekokians"
  merc_shengang_monks: "Shengang Monks"
+ merc_army_of_lin_liang: "Lin Liang's Army"
