--- a/localisation/TD_01_flavour_achiqnay_l_english.yml
+++ b/localisation/TD_01_flavour_achiqnay_l_english.yml
@@ -3,6 +3,8 @@
  high_kingdom_reform_desc: "People of Achiqnatar had to adapt to harsh mountainous environments. This terrain made it historically very hard to unite and administer the region."
  holy_city_reform: "Holy City"
  holy_city_reform_desc: "The most sacred city Achiqnay faith brings a great deal of prestige and pilgrim cash."
+ holy_empire_reform: "Holy Empire"
+ holy_empire_reform_desc: "As the rulers of the most sacred city, it is obvious that our entire realm must be holy."
  exiled_colonists_reform: "Exiled Colonists"
  exiled_colonists_reform_desc: "Our people were exiled to this land after many brutal conflicts in the homeland."
 
