formable + map changes

--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -173,3 +173,6 @@
  diarena_nation_desc: ""
  diarenan_colonization: "Diarenan Colonization"
  desc_diarenan_colonization: "Unification of Diarena allowed us to more effectively expand inland."
+
+ bac_wong_nation_title: "Restore Bac Wong"
+ bac_wong_nation_desc: ""
