--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1621,3 +1621,8 @@
 
  BCW: "Bac Wong"
  BCW_ADJ: "Bac Wongian"
+
+ BCW_con_seu: "Seu Vuong"
+ BCW_con_seu_ADJ: "Seuan"
+ BCW_da_xanh: "Xanh Vuong"
+ BCW_da_xanh_ADJ: "Xanhian"
