--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4176,11 +4176,11 @@
  PROV4175: "Boun Tuong"
  PROV4176: "Pheng Pan"
  PROV4177: "Dien Lam"
- PROV4178: "4178"
- PROV4179: "4179"
- PROV4180: "4180"
- PROV4181: "4181"
- PROV4182: "4182"
+ PROV4178: "Rang Ran"
+ PROV4179: "Lan Ngay"
+ PROV4180: "Wang He"
+ PROV4181: "Co Loc Chum"
+ PROV4182: "Tac Hal Tau"
  PROV4183: "Hoa Canh"
  PROV4184: "Cau Khi"
  PROV4185: "Hou Tha"
@@ -4197,7 +4197,7 @@
  PROV4196: "Dabgug"
  PROV4197: "Qabkhav"
  PROV4198: "Thung Nong"
- PROV4199: "4199"
+ PROV4199: "Mon Nao"
  PROV4200: "Tha Ao"
  PROV4201: "4201"
  PROV4202: "4202"
@@ -4226,10 +4226,10 @@
  PROV4225: "4225"
  PROV4226: "4226"
  PROV4227: "4227"
- PROV4228: "4228"
+ PROV4228: "Dahn Tlong"
  PROV4229: "4229"
- PROV4230: "4230"
- PROV4231: "4231"
+ PROV4230: "Dal Li"
+ PROV4231: "A Can"
  PROV4232: "4232"
  PROV4233: "4233"
  PROV4234: "4234"
