--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3884,7 +3884,7 @@
  PROV3883: "Rhaubdej"
  PROV3884: "Nepogmuag"
  PROV3885: "Nitshuab"
- PROV3886: "3886"
+ PROV3886: "Bien Nho"
  PROV3887: "Khuathai"
  PROV3888: "Futai"
  PROV3889: "Pchethau"
