--- a/localisation/loadingtips_l_english.yml
+++ b/localisation/loadingtips_l_english.yml
@@ -7,10 +7,10 @@
  LOADING_TIP_5: "Members of the Ramh Usra claim that they descend from the Musarfic god of war - Alramha."
  LOADING_TIP_6: "What was once homeland of the Pamkusean people is now ruled by Visparayan states - remnants of the Varazani Empire."
  LOADING_TIP_7: "Tetrarchy is responsible for electing the next ruler of Sigilian church, but with each year their power over the emperor grows."
- LOADING_TIP_8: "Brianola is a peasant republic, but with a dynastical dictatorship in charge"
+ LOADING_TIP_8: "Brianola is a peasant republic, but with a dynastical dictatorship in charge."
  LOADING_TIP_9: "Geniburgh Company is a group of mercenaries which served in the Zakarturi lands - until they grew strong enough to establish their own state."
  LOADING_TIP_10: "Tonatitlani people established their empire following the eighth century collapse caused by mass epidemics and famine."
- LOADING_TIP_11: "Rouvia was once a powerful tribal entity but was slowly colonized and conquered by Capiran and Aqerbic states."
+ LOADING_TIP_11: "According to some scholars, during antiquity Rouvia was a powerful kingdom, however it was destroyed by Capiran and Aqerbic settlers."
  LOADING_TIP_12: "Aevadata of Varazanah conquered the Pamkusean peninsula in the XIV century, forcing the local population into exile." 
  LOADING_TIP_13: "Instead of trying to supress the locals, Aurang of Memlashal decided to assimilate into his subjects, founding Apaxtaros dynasty."
  LOADING_TIP_14: "Ehwitrawi and Mewitan peoples are renowned for their mutual hatred."
