--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4211,7 +4211,7 @@
  PROV4210: "Cang Phia Nam"
  PROV4211: "Moi Cang"
  PROV4212: "4212"
- PROV4213: "Tnanh Pho Song"
+ PROV4213: "Thanh Pho Song"
  PROV4214: "4214"
  PROV4215: "4215"
  PROV4216: "Cang Phia Tay"
