--- a/localisation/loadingtips_l_english.yml
+++ b/localisation/loadingtips_l_english.yml
@@ -14,8 +14,8 @@
  LOADING_TIP_12: "Aevadata of Varazanah conquered the Pamkusean peninsula in the XIV century, forcing the local population into exile." 
  LOADING_TIP_13: "Instead of trying to supress the locals, Aurang of Memlashal decided to assimilate into his subjects, founding Apaxtaros dynasty."
  LOADING_TIP_14: "Ehwitrawi and Mewitan peoples are renowned for their mutual hatred."
- LOADING_TIP_15: "City of Togawy is famous for producing high quality Amber jewelry."
- LOADING_TIP_16: "Panpallpa means 'Flatlands' in Maquchan language."
+ LOADING_TIP_15: "The City of Togawy is famous for producing high quality Amber jewelry."
+ LOADING_TIP_16: "Panpallpa means 'Flatlands' in the Maquchan language."
  LOADING_TIP_17: "Grafoulan monk Liemar was not the first to attempt reforming the Saelian Church, but he surely was the most successful."
  LOADING_TIP_18: "Saelius died from trichinosis."
  LOADING_TIP_19: "Absolutist monarchy of Bogiland of the XVII century became a role-model for other powerful states in Mysentria."
