--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -4264,11 +4264,11 @@
  PROV_ADJ4263: "4263"
  PROV_ADJ4264: "4264"
  PROV_ADJ4265: "4265"
- PROV_ADJ4266: "4266"
- PROV_ADJ4267: "4267"
- PROV_ADJ4268: "4268"
+ PROV_ADJ4266: "Kanakadvar"
+ PROV_ADJ4267: "Vivlen"
+ PROV_ADJ4268: "Dolvam"
  PROV_ADJ4269: "4269"
- PROV_ADJ4270: "4270"
+ PROV_ADJ4270: "Kvunvam"
  PROV_ADJ4271: "4271"
  PROV_ADJ4272: "4272"
  PROV_ADJ4273: "4273"
