--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4264,11 +4264,11 @@
  PROV4263: "4263"
  PROV4264: "4264"
  PROV4265: "4265"
- PROV4266: "4266"
- PROV4267: "4267"
- PROV4268: "4268"
+ PROV4266: "Kanakadvar"
+ PROV4267: "Vivlen"
+ PROV4268: "Dolvam"
  PROV4269: "4269"
- PROV4270: "4270"
+ PROV4270: "Kvunvam"
  PROV4271: "4271"
  PROV4272: "4272"
  PROV4273: "4273"
